# guile-rs

./: .clog.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: shell.rs
guile-sys/: Cargo.toml  build.rs  wrapper.h
guile-sys/src/: bindings.rs  lib.rs
src/: lib.rs  repr.rs  scm.rs
