[package]
name = "guile"
version = "0.0.2"
authors = ["David Li <li.davidm96@gmail.com>",
           "Dom Rodriguez <shymega@shymega.org.uk"]
description = "Safe bindings to GNU Guile."
repository = "https://github.com/shymega/guile-rs"
license = "GPL-3.0"

[dependencies]
libc="0.2"

[dependencies.guile-sys]
path = "guile-sys"
version = "0.1.1"
